--- a/faq/billing-lifecycle/accepted-payment-methods.mdx
+++ b/faq/billing-lifecycle/accepted-payment-methods.mdx
@@ -1,12 +1,17 @@
 ---
 title: "Which Payment Methods Does EDBB Accept?"
 sidebarTitle: "* Payment Methods"
-description: "Pay for EDBB services with cards, cryptocurrencies, and select digital wallets." 
+description: "Explore the payment gateways available for EDBB services, including supported cards, cryptocurrencies, and digital wallets."
 ---
 
-## Credit and Debit Cards
+## Payment Gateways at a Glance
 
-Processed via Stripe with one-off or recurring billing support:  
+<Info>
+  EDBB processes payments in EUR through Stripe (cards & wallets) and CoinPayments/Coinbase Commerce (crypto). Pick whichever option suits your finance workflow—no deposits required.
+</Info>
+
+## Cards
+
 - Visa  
 - Mastercard  
 - American Express  
@@ -14,16 +19,19 @@ Processed via Stripe with one-off or recurring billing support:
 - Discover & Diners  
 - JCB
 
-## Cryptocurrency
+Cards are charged via Stripe with 3-D Secure support where required. Recurring renewals can be paid manually or automatically using saved card tokens.
 
-EDBB accepts payments through CoinPayments and Coinbase Commerce. Supported assets include (but are not limited to):  
+## Cryptocurrencies
+
+CoinPayments and Coinbase Commerce support a rotating list of popular assets, including:
+
 - Bitcoin (on-chain and Lightning)  
-- Bitcoin Cash  
-- Ethereum  
-- Litecoin  
-- USD Coin, USDT  
-- Dogecoin  
-- Polygon, Solana, BNB, and additional major coins
+- Bitcoin Cash, Litecoin  
+- Ethereum, Polygon, Solana  
+- USD Coin (USDC), Tether (USDT)  
+- Dogecoin, Binance Coin, and additional majors
+
+The gateway locks the exchange rate during checkout; send the exact amount shown to avoid underpayments.
 
 ## Digital Wallets
 
@@ -31,4 +39,6 @@ EDBB accepts payments through CoinPayments and Coinbase Commerce. Supported asse
 - Google Pay  
 - Alipay
 
-Payments post instantly to your account once confirmed by the processor. Contact Support if you need assistance with a specific method.
+These methods settle instantly once the wallet provider confirms the transaction.
+
+Need help with a specific payment? Contact Support via the portal messenger or email <strong>support@edbb.com</strong>.
