--- a/faq/billing-lifecycle/accidental-renewal-convert-payment-to-credit.mdx
+++ b/faq/billing-lifecycle/accidental-renewal-convert-payment-to-credit.mdx
@@ -4,28 +4,31 @@ sidebarTitle: "* Accidental Renewal"
 description: Learn how to cancel an auto-renewed service, provide the necessary information, and request to have your payment converted to account credit. Simple steps to resolve mistaken renewals.
 ---
 
-### Accidentally Renewed a Service? &#xA;Read how to Convert your Payment to Account Credit
+## Turn an Accidental Renewal into Credit
 
-If you’ve accidentally renewed a service but intended to cancel it, follow these steps to request a conversion of your payment to account credit.
+<Info>
+  Mistakenly renewed a VPS you meant to cancel? EDBB can convert the charge into account credit if you act quickly and meet the eligibility checks below.
+</Info>
 
-1. **Cancel the affected service**:
-   Log into your dashboard and cancel the service that was renewed by mistake. This ensures it won’t be auto-renewed again in the future.
-2. **Gather the necessary information**:
-   You will need to provide the invoice number for the service in question, as well as any associated IP addresses.
-3. **Contact the support team**:
-   Reach out through the portal messenger or email **support@edbb.com** with the following details:
-   - Invoice number
-   - Affected IP addresses
-   - Reason for your request
-4. **Processing Conversion**
-   Once our support team reviews your request and confirms the cancellation, your payment will be transferred to your credit balance. You can then use the credit towards future services with us.
+## What to Do
 
-<Note>
-**The Following Conditions Apply**
+<Steps>
+  <Step title="Cancel the renewed service">
+    In the portal, request cancellation (immediate) for the VPS that auto-renewed. This prevents additional billing.
+  </Step>
+  <Step title="Collect the details">
+    Note the invoice number, primary IPv4 (or KVM ID), and when the payment was made.
+  </Step>
+  <Step title="Message Support">
+    Contact us via the messenger or email <strong>support@edbb.com</strong> with the information above and confirm you want the payment moved to account credit.
+  </Step>
+</Steps>
 
-The request must be filed before the service’s due date.
-The payment must have been made within 24 hours of your request.
+## Eligibility Checklist
 
-Payments are transferred to your account balance, not refunded directly to the original payment method. EDBB reserves the right to decline requests that fall outside these conditions but will always aim for a fair resolution.
+- Request arrives within **24 hours** of paying the renewal invoice.  
+- Service is still within its current billing cycle (not past the due date).  
+- No previous courtesy credit for the same service in the last 12 months.  
+- Account is in good standing with no AUP violations.
 
-</Note>
+When approved, we transfer the payment to your EDBB account balance. Credits can be used for future invoices but are not refunded to the original payment method.
