--- a/faq/billing-lifecycle/add-contact-receive-invoices-different-email.mdx
+++ b/faq/billing-lifecycle/add-contact-receive-invoices-different-email.mdx
@@ -4,13 +4,16 @@ sidebarTitle: "* Invoice Recipients"
 description: "Add contacts in the EDBB portal so invoices and other notices go to additional email addresses." 
 ---
 
-## Add an Invoice Recipient
+## Add Recipients in the Portal
 
-1. Log in to the client portal.  
-2. Click your name → **Contacts / Sub-Accounts**.  
-3. Choose **Add New Contact**.  
-4. Enter the contact details and tick **Invoice Emails** (plus any other categories they should receive).  
-5. Save the contact.
-
-Invoices will now be sent to both the primary account email and the new contact.  
-You can edit or remove contacts at any time from the same menu.
+<Steps>
+  <Step title="Open Contacts / Sub-Accounts">
+    Sign in, click your name in the top-right corner, and choose <strong>Contacts / Sub-Accounts</strong>.
+  </Step>
+  <Step title="Create the contact">
+    Select <strong>Add New Contact</strong>, fill in their name and email, and tick <strong>Invoice Emails</strong> (plus any other notifications they should receive).
+  </Step>
+  <Step title="Save and confirm">
+    Save the contact. Future invoices now go to both the primary address and the new recipient. Edit or remove recipients from the same menu anytime.
+  </Step>
+</Steps>
