--- a/faq/billing-lifecycle/can-i-get-a-refund.mdx
+++ b/faq/billing-lifecycle/can-i-get-a-refund.mdx
@@ -6,11 +6,13 @@ description: "Refunds are available within 24 hours of purchase if you meet the 
 
 ## Eligibility Checklist
 
-You may request a refund when **all** of the following are true:
+<Info>
+  EDBB offers refunds within **24 hours** of ordering a new VPS when all policy conditions are satisfied.
+</Info>
 
-- VPS ordered within the past **24 hours**  
-- No discount codes, special deals, traffic add-ons, or plan upgrades were applied  
-- No prior refund granted in the last **12 months**  
-- Service was not suspended for AUP violations
+- Service was ordered less than 24 hours ago  
+- No promo codes, add-on traffic, or upgrades were involved  
+- No previous refund issued to the same customer within 12 months  
+- The VPS has not been suspended for policy violations
 
-If you meet the criteria, cancel the VPS with immediate effect and follow the instructions in the [Cancellation & Refund Policy](./cancellation-and-refund-policy) to submit your request with the IP address and Support PIN.
+When these checks pass, we’ll refund the original payment method. Outside of this window, payments can be converted to account credit instead of refunded.
