--- a/faq/billing-lifecycle/cancel-a-service.mdx
+++ b/faq/billing-lifecycle/cancel-a-service.mdx
@@ -10,26 +10,32 @@ You can cancel any EDBB VPS directly from the portal. The request takes effect i
 
 ---
 
+## Before You Cancel
+
+<Info>
+  Cancellation is irreversible once the six-day retention window passes. Take fresh backups and confirm the correct VPS by double-checking the Primary IPv4 and plan details in the right-hand summary panel.
+</Info>
+
+---
+
 ## Submit the Cancellation in the Portal
 
 <Steps>
   <Step title="Sign in to the portal">
-    Open the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a> and go to <strong>Services</strong>.
+    Open the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a> and go to <strong>Services → My Products</strong>.
   </Step>
   <Step title="Open the VPS record">
     Click the service you want to cancel to view its management dashboard.
   </Step>
   <Step title="Choose Request Cancellation">
-    In the sidebar, select <strong>Request Cancellation</strong>. Pick whether the service should stop <strong>immediately</strong> or <strong>at the end of the billing period</strong>.
+    In the right-hand panel, press the red <strong>Request Cancellation</strong> button. Select whether the VPS should stop <strong>immediately</strong> or <strong>at the end of the billing period</strong>.
   </Step>
   <Step title="Confirm the request">
-    Submit the form. The portal sends an email confirmation and updates the service status right away.
+    Submit the form. The portal updates the service status and sends a confirmation email showing the chosen cancellation date.
   </Step>
 </Steps>
 
-If you change your mind before data deletion occurs, open a ticket with support and reference the VPS ID so we can review reinstatement options.
-
-<iframe width="100%" height="450" src="https://www.loom.com/embed/206825b87a894704af333b9fb57a5a2b?sid=7a6cf401-af9b-4494-b44d-8a95f12927ff" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen />
+If you change your mind before data deletion occurs, contact Support via the messenger or by email and reference the VPS ID so we can review reinstatement options.
 
 ---
 
@@ -49,7 +55,7 @@ Once the deletion window passes, snapshots and disk data cannot be recovered.
 - **Invoices stop** – the upcoming renewal is voided so the service will not bill again.
 - **Backups first** – download any data you want to keep before the termination window closes.
 - **Traffic and addons end together** – attached IPs or traffic pool top-ups are removed when the VPS is deleted.
-- **Need it back?** Open a support ticket before data removal finishes; reinstatement is only possible while the VPS still exists on the platform.
+- **Need it back?** Message Support (messenger or email) before data removal finishes; reinstatement is only possible while the VPS still exists on the platform.
 
 <Note>
   EDBB plans are billed per monthly subscription term. Charges that have already been paid are non-refundable unless the cancellation occurs within the initial 24-hour cooling-off window for brand-new services.
