--- a/faq/billing-lifecycle/eu-vat-explained-if-and-how-much.mdx
+++ b/faq/billing-lifecycle/eu-vat-explained-if-and-how-much.mdx
@@ -4,20 +4,20 @@ sidebarTitle: "* EU VAT"
 description: "See when EDBB applies VAT to invoices based on customer location and VAT registration status." 
 ---
 
-## VAT Basics
+## How VAT Applies
 
-EDBB is headquartered in Cyprus and invoices in EUR.  
-VAT is applied according to EU distance-selling rules and the buyer’s status.
+<Info>
+  EDBB is headquartered in Cyprus. We invoice in EUR and follow EU VAT rules based on your billing address and tax status.
+</Info>
 
-## Charged at Checkout
+### VAT Charged Automatically
 
-- **Cyprus residents (B2C & B2B)**: 19% VAT  
-- **EU consumers (outside Cyprus)**: VAT rate of the customer’s member state
+- Cyprus residents (business or consumer): **19% VAT**  
+- EU consumers outside Cyprus: VAT rate of your member state
 
-## Reverse Charge (0% VAT)
+### When VAT Is 0%
 
-- **EU businesses** supplying a valid VAT ID  
-- **Customers outside the EU or in VAT-exempt territories**
+- EU businesses that enter a valid VAT ID (reverse charge)  
+- Customers outside the EU or in VAT-exempt territories
 
-Invoices display the applied VAT rate or “reverse charge” note as required.  
-Ensure company details and VAT numbers are accurate in the customer portal before placing orders.
+Invoices clearly show the rate applied or the reverse-charge note. Keep your company profile and VAT number up to date in the portal before ordering.
