--- a/faq/billing-lifecycle/find-and-download-invoices.mdx
+++ b/faq/billing-lifecycle/find-and-download-invoices.mdx
@@ -4,12 +4,18 @@ sidebarTitle: "* Download Invoices"
 description: "Access all EDBB invoices from the client portal and download PDFs for your records." 
 ---
 
-## Portal Access
+## Download Invoices in Seconds
 
-1. Log in to the [EDBB client portal](https://my.edbb.com/clientarea.php).  
-2. Click **Billing → My Invoices**.  
-3. Use the search or filters to find the invoice you need.  
-4. Open the invoice and select **Download PDF**.
+<Steps>
+  <Step title="Open the invoice list">
+    Log in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a> and navigate to <strong>Billing → My Invoices</strong>.
+  </Step>
+  <Step title="Find the document">
+    Use search or filters (status, date range, amount) to locate the invoice you need.
+  </Step>
+  <Step title="Export the PDF">
+    Open the invoice and click <strong>Download PDF</strong> for your records.
+  </Step>
+</Steps>
 
-Invoices are also emailed to your primary contact.  
-Add additional recipients under **Contacts** if you need copies sent elsewhere.
+Invoices are emailed to the primary account address automatically. Add teammates under <strong>Contacts / Sub-Accounts</strong> if they also need copies.
