--- a/faq/billing-lifecycle/handling-blocked-cryptocurrency-payments-cryptomus.mdx
+++ b/faq/billing-lifecycle/handling-blocked-cryptocurrency-payments-cryptomus.mdx
@@ -6,16 +6,22 @@ description: "If Cryptomus flags a payment as suspicious, complete the complianc
 
 ## Why Payments Are Blocked
 
-Cryptomus monitors blockchain activity with AML tools.  
-If a transfer is flagged, the gateway pauses settlement until the sender provides additional information.
+<Info>
+  Cryptomus uses AML and risk scoring to analyse every transfer. If a transaction looks suspicious, they pause settlement until the sender proves the funds are legitimate.
+</Info>
 
 ## What to Do
 
-1. Follow the on-screen questionnaire to supply the requested details (source of funds, wallet type, etc.).  
-2. Keep your transaction ID (TXID) handy.  
-3. If you need direct assistance, contact Cryptomus Support:  
-   - Telegram: [@cryptomussupport](https://t.me/cryptomussupport)  
-   - Email: [support@cryptomus.com](mailto:support@cryptomus.com)
+<Steps>
+  <Step title="Complete the questionnaire">
+    Provide the requested details on-screen (source of funds, wallet type, business purpose).
+  </Step>
+  <Step title="Have the TXID ready">
+    You’ll need the transaction hash for any follow-up.
+  </Step>
+  <Step title="Escalate if needed">
+    Contact Cryptomus directly via Telegram <a href="https://t.me/cryptomussupport" target="_blank" rel="noreferrer">@cryptomussupport</a> or email <a href="mailto:support@cryptomus.com">support@cryptomus.com</a> (06:00–21:00 UTC).
+  </Step>
+</Steps>
 
-Support typically operates 06:00–21:00 UTC.  
-Once the review is complete, Cryptomus either releases the payment to EDBB or refunds it to your wallet.
+Once the review is complete, Cryptomus either releases the payment to EDBB or refunds it to your wallet. If you need us to check the invoice status, reach out via the portal messenger or email with the TXID and invoice number.
