--- a/faq/billing-lifecycle/how-to-add-account-credit.mdx
+++ b/faq/billing-lifecycle/how-to-add-account-credit.mdx
@@ -4,31 +4,38 @@ sidebarTitle: "* Add Account Credit"
 description: Learn how to add funds to your account, apply credit to invoices, and avoid underpayment issues. Step-by-step guide for account top-ups.
 ---
 
-## How to Top Up Your Account Credit  
+## Why Add Credit?
 
-Adding funds to your account allows you to pay future invoices automatically or manually apply credit to existing invoices.  
+<Info>
+  Account credit is optional. It’s useful if you want renewals to auto-charge from a balance, prefer to pre-fund several invoices, or need coverage while traveling.
+</Info>
 
-## Steps to Add Funds  
-1. **Log in** to the [EDBB portal](https://my.edbb.com/clientarea.php?action=addfunds).  
-2. Go to the **Billing** section.  
-3. Click on **"Add Funds"**.  
-4. Enter the amount you want to add.  
-5. Choose your preferred **payment method**.  
-6. Click **"Add Funds"** and follow the checkout process.  
+## Top Up in the Portal
 
-## How Payments Work  
-- **Future invoices** will be paid automatically using your account credit.  
-- **Existing invoices** are *not* paid automatically, but you can manually apply credit to them.  
-- **Overpayments** are credited to your account balance.  
-- **Underpayments** (when the full amount is not received) must be resolved manually and may require an additional payment.  
+<Steps>
+  <Step title="Open the Add Funds page">
+    Sign in to the <a href="https://my.edbb.com/clientarea.php?action=addfunds" target="_blank" rel="noreferrer">EDBB VPS Portal</a> and navigate to <strong>Billing → Add Funds</strong>.
+  </Step>
+  <Step title="Choose the amount and method">
+    Enter the amount to deposit and pick your preferred payment method (card, crypto, or supported wallet).
+  </Step>
+  <Step title="Complete checkout">
+    Follow the processor prompts. The balance appears instantly once the transaction is confirmed.
+  </Step>
+</Steps>
 
-## Important Notes for Crypto Payments  
-- Always **cover transaction (TX) fees** when sending crypto payments.  
-- To avoid underpayment issues, it’s better to slightly **overpay** rather than risk being short by a small amount.  
-- **Underpayments will require an additional payment** to get the full amount credited.  
+## How the Balance Is Used
 
+- Future invoices auto-deduct from credit when the due date arrives.  
+- Existing unpaid invoices remain outstanding—you can apply credit manually from the invoice view.  
+- Overpayments add to your credit; underpayments require an additional top-up to cover the difference.
 
+## Crypto Payment Tips
 
-## Cancel Top-Up Invoices
+- Include network fees so the gateway receives the exact requested amount.  
+- Slightly overpay if your wallet rounds down dust amounts.  
+- If the payment lands short, the system will prompt for a top-up to close the gap.
 
-If you accidentally create one (or even multiple) top-up pro forma invoice, our system will automatically cancel these documents after approximately 36 hours. You don't need to be concerned about these, we'll take care of them automatically.
+## Accidental Top-Up Invoices
+
+Created a pro-forma by mistake? Unpaid Add Funds invoices auto-expire after ~36 hours, so you can simply ignore them.
