--- a/faq/billing-lifecycle/how-to-receive-monthly-consolidated-invoice.mdx
+++ b/faq/billing-lifecycle/how-to-receive-monthly-consolidated-invoice.mdx
@@ -4,20 +4,32 @@ sidebarTitle: "* Consolidated Invoice"
 description: "EDBB can align all active services to a single billing date so you receive one monthly invoice." 
 ---
 
-## Overview
+## Why Consolidate?
 
-If you run multiple VPS instances, EDBB can synchronize their renewal dates and issue a single invoice each month.  
-This simplifies accounting and reduces the number of payment transactions.
+<Info>
+  Aligning renewals onto one date simplifies budgeting and accounting—especially if you manage multiple VPSs or projects.
+</Info>
 
-## How It Works
+- Fewer invoices to track each month.  
+- One payment covers every active service aligned to that cycle.  
+- Ideal for finance teams that reconcile expenses on a set day.
 
-- Support sets a target billing day (e.g., 1st or 15th of the month).  
-- You receive a one-time pro-rated adjustment invoice to align all services.  
-- After payment, every active service renews on that consolidated date.
+## How Consolidation Works
 
-New services added later renew on their own schedule unless you request another alignment.
+- Support assigns a target billing day (for example, the 1st or 15th).  
+- You receive a pro-rated adjustment invoice to sync current services.  
+- After payment, renewals occur on the chosen date. New services follow their own cycle unless you request another alignment.
 
-## How to Request
+## Request the Change
 
-Open a ticket with Support and specify the preferred billing date.  
-We’ll guide you through the alignment invoice and confirm once the monthly consolidation is active.
+<Steps>
+  <Step title="Pick your target date">
+    Choose the day that fits your accounting schedule.
+  </Step>
+  <Step title="Message Support">
+    Contact us via messenger or email with the desired date and list of services to align.
+  </Step>
+  <Step title="Settle the adjustment invoice">
+    Pay the one-time pro-rated invoice we generate. We’ll confirm once consolidation is active.
+  </Step>
+</Steps>
