--- a/faq/billing-lifecycle/no-upfront-deposits-required.mdx
+++ b/faq/billing-lifecycle/no-upfront-deposits-required.mdx
@@ -4,15 +4,22 @@ sidebarTitle: "* Upfront Deposits"
 description: "EDBB lets you order VPS services without preloading account credit; pay per invoice via card or supported cryptocurrencies."
 ---
 
-## Order Without Prepayments
+## No Deposit Needed
 
-EDBB does not require a deposit balance before you buy.  
-Choose your plan, proceed to checkout, and pay the invoice using credit card or supported cryptocurrencies.
+<Info>
+  You can order any EDBB VPS without keeping a prepaid balance. Place the order, pay the invoice, and you’re live—no security deposit or minimum credit required.
+</Info>
 
-## Optional Account Top-Ups
+## How Billing Works
 
-- Add funds if you prefer invoices to auto-charge from credit.  
-- Useful when you expect multiple small renewals or need coverage while you’re away.  
-- Top-ups are optional; monthly billing continues to work without them.
+- Each service generates a monthly invoice in EUR.  
+- Pay with cards, crypto, or supported wallets on or before the due date.  
+- As long as invoices are paid in time, services remain active.
 
-All services remain active as long as invoices are paid by the due date.
+## When Credit Comes in Handy
+
+- Pre-load funds if you manage multiple renewals and prefer one payment.  
+- Maintain a balance before vacations or maintenance windows so renewals can post without manual action.  
+- Combine with automated emails to keep accounting tidy.
+
+Need to park funds in advance? Follow the <a href="./how-to-add-account-credit">Add Account Credit guide</a>. Otherwise, pay-as-you-go works just fine.
