--- a/faq/ip-addresses/debugging-packet-loss-traceroute-mtr-windows.mdx
+++ b/faq/ip-addresses/debugging-packet-loss-traceroute-mtr-windows.mdx
@@ -4,35 +4,39 @@ sidebarTitle: "* Packet Loss Tests"
 description: "Collect traceroute or MTR output from Windows or Linux to help EDBB support pinpoint connectivity issues between your network and the VPS."
 ---
 
-## When to Capture Diagnostics
+## Before You Start
 
-If you notice packet loss or unusual latency, share traceroute or MTR/WinMTR results with EDBB support.  
-These reports reveal where along the path traffic is delayed or dropped.
+<Info>
+  Collect hop-by-hop data as soon as you observe loss or latency. Fresh diagnostics help EDBB identify whether the issue sits with your ISP, an upstream carrier, or inside the data center.
+</Info>
 
-## Windows: Built-in Traceroute
+## Windows Tools
 
-1. Press `Windows + R`, type `cmd`, and press **Enter**.  
-2. Run `tracert <VPS IPv4>`.  
-3. Wait for the trace to finish.  
-4. Right-click the window title → **Edit** → **Mark**, highlight the full output, press **Enter**, then paste it into your ticket.
+### Command Prompt Traceroute
 
-## Windows: WinMTR
+1. Press `Windows + R`, type `cmd`, and hit **Enter**.  
+2. Run `tracert <VPS IPv4 or IPv6>`.  
+3. After it completes, right-click the title bar → **Edit → Mark**, select the entire output, press **Enter**, and paste it into your support message (messenger or email).
+
+### WinMTR (Recommended for trending loss)
 
 1. Download and install WinMTR.  
 2. Launch the app and enter the VPS IPv4 in **Host**.  
 3. Click **Start** and let it run for 5–10 minutes.  
 4. Use **Export TEXT** to save the results and attach the file.
 
-## Linux (and macOS): traceroute & mtr
+## Linux or macOS
 
 1. Install the tools if needed:  
    - Debian/Ubuntu: `sudo apt update && sudo apt install traceroute mtr`  
    - RHEL/CentOS/Alma/Rocky: `sudo dnf install traceroute mtr`
 2. Run `traceroute <VPS IPv4>` to capture the hop list.  
 3. Run `mtr -w -c 100 <VPS IPv4>` for a summary, or `mtr -rwzbc 100 <VPS IPv4> > mtr-report.txt` to export a text file.  
-4. Attach the output or saved file when contacting support.
+4. Attach the output or saved file when contacting Support via messenger or email.
+
+> For IPv6, repeat the commands with `traceroute6` / `mtr -6`.
 
 ## Submitting the Results
 
-Include the traceroute/WinMTR/MTR output, the time of the test, and the VPS IP in your ticket.  
+Include the traceroute/WinMTR/MTR output, the time of the test, and the VPS IP in your support message.  
 EDBB engineers use this hop-by-hop data to determine whether the issue is on your local network, an upstream carrier, or within the data center.
