--- a/faq/ip-addresses/geolocation-geoip-databases.mdx
+++ b/faq/ip-addresses/geolocation-geoip-databases.mdx
@@ -4,22 +4,26 @@ sidebarTitle: "* GeoIP Databases"
 description: "GeoIP providers rely on registry and geofeed data. EDBB keeps records current, but third-party databases may lag until they refresh."
 ---
 
-## Source of GeoIP Data
+## Where GeoIP Data Comes From
 
-Regional Internet Registries (RIRs) such as RIPE, ARIN, APNIC, LACNIC, and AFRINIC maintain authoritative records for each IPv4/IPv6 allocation.  \n+WHOIS entries contain country codes, abuse contacts, and optional geolocation metadata.  \n+EDBB submits accurate details for every prefix we announce.
+<Info>
+  Geo-location services combine registry data, geofeed files, and crowd-sourced updates. EDBB publishes accurate records to each Regional Internet Registry (RIR) and maintains geofeeds so providers know where our prefixes live.
+</Info>
 
-Many GeoIP providers also consume **geofeed** files that network operators publish.  \n+EDBB maintains geofeed entries so downstream services can map our addresses to the correct latitude/longitude.
+- RIR WHOIS listings include our organization details, country codes, and abuse contacts. Check the prefix in <a href="https://stat.ripe.net/" target="_blank" rel="noreferrer">RIPEstat</a>, <a href="https://whois.arin.net/ui/" target="_blank" rel="noreferrer">ARIN</a>, <a href="https://rdap.apnic.net/" target="_blank" rel="noreferrer">APNIC</a>, <a href="https://rdap.lacnic.net/rdap/" target="_blank" rel="noreferrer">LACNIC</a>, or <a href="https://rdap.afrinic.net/rdap/" target="_blank" rel="noreferrer">AFRINIC</a> depending on the allocation.  
+- Geofeed files supply latitude/longitude hints for automated platforms—see the <a href="https://datatracker.ietf.org/doc/html/rfc8805" target="_blank" rel="noreferrer">RFC 8805 geofeed format</a> for details.  
+- Some vendors accept corrections directly from users (for example, <a href="https://whatismyipaddress.com/location-feedback" target="_blank" rel="noreferrer">WhatIsMyIPAddress feedback</a> or <a href="https://db-ip.com/report" target="_blank" rel="noreferrer">DB-IP reports</a>), which can temporarily override authoritative data.
 
 ## Why Lookup Results Sometimes Differ
 
-- Providers refresh at different intervals—some daily, others weekly or longer.  \n
-- Certain platforms let end users override location data, which can introduce temporary errors.  \n
-- Cached datasets may lag behind recent moves or new deployments.
+- Each provider refreshes on its own cadence (from daily to monthly).  
+- User-submitted overrides or stale caches can surface outdated city/country mappings.  
+- New deployments may take a refresh cycle or two before every dataset aligns.
 
-If you spot an outdated location in a third-party app, contact their support to request a database refresh using the current registry and geofeed information.
+If you spot incorrect results, reach out to the GeoIP service with the correct WHOIS and geofeed reference. Most vendors re-sync within their next batch update; common contact points include <a href="https://support.maxmind.com/hc/en-us/articles/4407111580443-Correct-a-Location" target="_blank" rel="noreferrer">MaxMind GeoIP corrections</a>, <a href="https://ipinfo.io/account/data-corrections" target="_blank" rel="noreferrer">IPinfo data corrections</a>, and the <a href="https://whatismyipaddress.com/location-feedback" target="_blank" rel="noreferrer">WhatIsMyIPAddress feedback form</a>.
 
 ## Verifying Your Address
 
-- Check the WHOIS output for the prefix to confirm the registered location.  \n
-- Compare multiple GeoIP services to determine whether a single provider is out of sync.  \n
-- Raise a ticket with EDBB Support if you need assistance liaising with a specific lookup vendor.
+- Run a WHOIS lookup on the prefix to view the authoritative country and organization fields—<a href="https://stat.ripe.net/" target="_blank" rel="noreferrer">RIPEstat</a> and <a href="https://whois.arin.net/ui/" target="_blank" rel="noreferrer">ARIN WHOIS</a> are good starting points.  
+- Compare several GeoIP databases (e.g., <a href="https://www.maxmind.com/en/geoip-demo" target="_blank" rel="noreferrer">MaxMind demo</a>, <a href="https://ipinfo.io/" target="_blank" rel="noreferrer">ipinfo.io</a>, <a href="https://db-ip.com/" target="_blank" rel="noreferrer">DB-IP</a>). If only one disagrees, it likely needs to refresh.  
+- Contact EDBB Support if you require assistance nudging a particular provider.
