--- a/faq/ip-addresses/ip-can-not-be-reached-from-my-country.mdx
+++ b/faq/ip-addresses/ip-can-not-be-reached-from-my-country.mdx
@@ -4,20 +4,40 @@ sidebarTitle: "* Local Reachability"
 description: "Test reachability from multiple regions and request a complimentary IP change within 24 hours if your EDBB VPS IP is blocked locally."
 ---
 
+import { CtaButton } from "/snippets/cta-button.mdx";
+
+## First Confirm the Scope
+
+<Info>
+  Regional carriers or national firewalls sometimes filter specific IPv4 ranges. Before requesting changes, confirm whether the problem only affects your local network or if it is widespread.
+</Info>
+
 ## Verify the Scope of the Issue
 
-1. Check connectivity from a different network (mobile hotspot, secondary ISP, VPN) to confirm whether the block is specific to your local provider.  \n
-2. Use remote monitoring nodes or colleagues in other countries to ping the IP.  \n
-3. If the address works elsewhere but not from your country, the path is likely filtered by a regional carrier or regulator.
+<Steps>
+  <Step title="Test from alternate networks">
+    Try a mobile hotspot, a second ISP, or a trusted VPN. If those succeed, the block likely sits with your primary provider.
+  </Step>
+  <Step title="Check from other regions">
+    Ask colleagues abroad or use external monitors (Looking Glass, latency tools) to ping the IP from multiple countries.
+  </Step>
+  <Step title="Document your findings">
+    Capture traceroute/WinMTR output and note timestamps. This evidence speeds up any follow-up with EDBB or upstream carriers.
+  </Step>
+</Steps>
 
 ## Request a Replacement IP
 
-Within the first 24 hours of provisioning, EDBB will swap the primary IPv4 free of charge.  \n+Open a ticket, mention the VPS identifier, and include test results showing the failure.  \n+After the change, reinstall or configure the new address manually so services come back online.
+Within the first 24 hours of provisioning, EDBB will swap the primary IPv4 once at no cost.
+
+- Contact Support via the messenger or email with your VPS identifier.  
+- Attach the reachability tests showing where the IP is blocked.  
+- Once approved, the portal replaces the address—reinstall the VPS or apply the new configuration manually so services resume.
 
 <CtaButton label="How to Change IP" link="./change-ip-address" />
 
 ## Mitigation Tips
 
-- Avoid reusing blocked IP information in DNS or application settings.  \n
-- Where applicable, configure regional CDN or proxy services to absorb country-level filtering.  \n
-- For long-term resilience, maintain standby nodes in alternate jurisdictions.
+- Update DNS records and application allow-lists with the replacement IP promptly.  
+- Where available, leverage a CDN or proxy with PoPs in your target region to absorb filtering.  
+- Maintain standby nodes in alternate jurisdictions as part of your continuity plan.
