--- a/faq/ip-addresses/static-ip-addresses.mdx
+++ b/faq/ip-addresses/static-ip-addresses.mdx
@@ -6,8 +6,10 @@ description: "Every EDBB VPS includes a static IPv4 and /64 IPv6 allocation that
 
 ## Static by Default
 
-Each VPS receives:  \n
-- One dedicated IPv4  \n
-- A /64 IPv6 subnet
+<Info>
+  Every EDBB VPS ships with one dedicated IPv4 and a /64 IPv6 subnet. They are yours for the lifetime of the service.
+</Info>
 
-These assignments do not rotate or change automatically.  \n+They persist through reboots, reinstalls, and plan upgrades until you cancel the service or request an IP change.
+- The assignments persist through reboots, reinstalls, and plan upgrades.  
+- They only change if you cancel, trigger the 24-hour complimentary swap, or order a paid IP change.  
+- Additional IPv4s can be layered on via Support or the Upgrade Components flow without affecting the primary IP.
