--- a/faq/traffic-bandwidth/traffic-stats-refill-explained.mdx
+++ b/faq/traffic-bandwidth/traffic-stats-refill-explained.mdx
@@ -4,25 +4,75 @@ sidebarTitle: "* Traffic Dashboard"
 description: "Track how EDBB meters VPS traffic, when usage resets, and what happens at 100% consumption." 
 ---
 
-## Where to Check Usage
+## Find Everything on the Traffic Tab
 
-1. Log in to the EDBB client portal.  
-2. Select your VPS under **Services**.  
-3. Review the **Traffic Information** widget for:  
-   - Total traffic consumed this cycle  
-   - Remaining allocation  
-   - Days until the next monthly refill
+<Info>
+  In the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a>, open your VPS and switch to the <strong>Traffic</strong> tab. It shows the current cycle, auto-hydration settings, pool balance, and usage charts at a glance.
+</Info>
 
-Daily charts provide an overview of inbound + outbound usage. Totals reset on the VPS renewal date.
+![Traffic tab overview](/assets/traffic_info.png)
 
-## Metering & Alerts
+---
 
-Traffic is counted as the sum of ingress and egress on the virtual NIC.  
-Email warnings trigger at 80%, 90%, and 100% of the plan limit.
+## Read the Summary Card
 
-## At 100% Usage
+- **Progress ring** – % of your monthly allowance consumed.  
+- **Numerical usage** – exact GB used vs. available.  
+- **Refill timer** – when the allowance resets (matches your VPS renewal date).
 
-The interface throttles to roughly 64 kbit/s after a small 5% grace buffer.  
-There are no overage fees; service remains online at the reduced speed.
 
-To regain full throughput, either wait for the monthly refill or add capacity via the traffic pool or a plan upgrade.
+![Cumulative traffic chart](/assets/cumulative_traffic.png)
+
+Email alerts land at 80%, 90%, and 100%, but the portal indicator is the quickest way to spot high usage.
+
+---
+
+## Inspect Daily & Cumulative Graphs
+
+- Hover over the bars to see each day’s combined ingress + egress in GB.  
+- Use the cumulative chart to verify long-running jobs or unexpected spikes.
+
+<div style={{display: "flex", gap: "16px", flexWrap: "wrap", alignItems: "stretch"}}>
+  <div style={{flex: "1 1 320px"}}>
+    <img src="/assets/daily_traffic.png" alt="Daily traffic chart" style={{width: "100%", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.06)"}} />
+  </div>
+  <div style={{flex: "1 1 320px"}}>
+    <img src="/assets/traffic_info-cal.png" alt="Traffic calendar view" style={{width: "100%", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.06)"}} />
+  </div>
+</div>
+
+Totals reset automatically at the start of the next billing cycle.
+
+---
+
+## Manage Traffic Pool & Hydration
+
+
+![Manual and auto hydration tabs](/assets/traffic-pool-edbb-manual-auto-hydration.png)
+
+**A — Traffic Pool**  
+Shows the shared balance for your account. Click “Top up” to purchase more capacity when needed.
+
+**B — Manual Hydration**  
+Select a block (+100 GB, +500 GB, +1 TB, +10 TB) and press **Assign Traffic** to add it instantly to the VPS.
+
+**C — Auto Hydration**  
+Set a top-up size (e.g., +100 GB). When usage hits 99%, the chosen amount is assigned automatically. Check the status banner for the active rule.
+
+All assignments are logged under **Hydration log** and **Pool log**.
+
+---
+
+## What Happens at 100% Usage?
+
+<Steps>
+  <Step title="Grace & throttle">
+    After a 5% grace buffer, the NIC is capped at roughly <strong>64 kbit/s</strong>. The VPS stays online but feels slow.
+  </Step>
+  <Step title="Restore full speed">
+    Assign pool traffic, upgrade the plan, or wait for the monthly refill—any of these actions lifts the throttle immediately.
+  </Step>
+  <Step title="Stay proactive">
+    Monitor the Traffic tab and enable auto hydration if you run resource-heavy workloads. Always keep recent off-site backups in case you choose to wait for the reset window.
+  </Step>
+</Steps>
