--- a/faq/upgrades-downgrades/requesting-qcow2-image-backup.mdx
+++ b/faq/upgrades-downgrades/requesting-qcow2-image-backup.mdx
@@ -1,20 +1,33 @@
 ---
 title: "Request a qcow2 Image Backup"
 sidebarTitle: "* qcow2 Backup"
-description: "EDBB can export your VPS disk as a downloadable qcow2 image for a one-time fee." 
+description: "Order an offline qcow2 snapshot of your EDBB VPS, understand pricing, and learn how to download it securely." 
 ---
 
-## Service Overview
+## When to Request an Export
 
-EDBB offers manual qcow2 exports for customers who need an offline snapshot of their VPS.  
-- Fee: **€25** per export  
-- Delivery: password-protected download link valid for **30 days**
+<Info>
+  qcow2 exports give you a complete disk image—perfect for cold storage, lab testing, or migrating to another virtualization stack. EDBB prepares them on demand for a one-time fee.
+</Info>
 
-## Request Process
+- Cost: **€25** per export  
+- Delivery: password-protected download link valid for **30 days**  
+- Contents: full disk image exactly as it exists at the moment of export
 
-1. Contact Support with the VPS IP or KVM ID.  
-2. Pay the generated invoice.  
-3. Receive the secure download link once the image is ready.  
-4. Download and store the file before the link expires.
+---
 
-Instant snapshots are not yet available, so plan periodic exports if you require offline copies.
+## How to Order
+
+<Steps>
+  <Step title="Open a support request">
+    Share the VPS IP or KVM ID via messenger/email and mention that you’d like a qcow2 export.
+  </Step>
+  <Step title="Settle the invoice">
+    Pay the automatically generated €25 invoice so the export can begin.
+  </Step>
+  <Step title="Download promptly">
+    When the export is ready, we’ll send a secure link and password. Download and archive the file before the 30-day window closes.
+  </Step>
+</Steps>
+
+> Need recurring offline backups? Schedule exports periodically or combine them with your own snapshot tooling until instant snapshots are available.
