--- a/getting-started/QQQQ_check-your-inbox.mdx
+++ b/getting-started/QQQQ_check-your-inbox.mdx
@@ -22,7 +22,7 @@ Check your spam folder and whitelist `support@edbb.com`. If nothing arrives with
 
 ### Bookmark These Links
 
-- [EDBB VPS Portal](https://my.edbb.com/clientarea.php) – Manage services, invoices, and support tickets.
+- [EDBB VPS Portal](https://my.edbb.com/clientarea.php) – Manage services, invoices, and chat with Support in the messenger.
 - [Knowledge Base](https://docs.edbb.com) – Step-by-step guides and troubleshooting tips.
 - [Status Page](https://status.edbb.com) – Subscribe for real-time maintenance and incident alerts.
 
