--- a/how-our-support-team-helps-you.mdx
+++ b/how-our-support-team-helps-you.mdx
@@ -4,57 +4,61 @@ sidebarTitle: "* Support Scope"
 description: "Understand how EDBB Support assists with billing, troubleshooting guidance, and escalation, while respecting your privacy and system boundaries."
 ---
 
-## How the Support Team Assists
+# Meet the EDBB Support Desk
 
-The **EDBB Support** crew is your front line for billing questions, account changes, and VPS management guidance.  
-Our focus is to provide clear explanations, point you to the right documentation, and ensure your hosting experience stays steady.
+<Info>
+  Need a hand with the portal, an invoice, or figuring out your next troubleshooting step? EDBB Support is here 24/7 to point you in the right direction while keeping your VPS secure and under your control.
+</Info>
 
----
-
-## Areas We Handle
-
-* 💳 **Billing & Account Help**  
-  Clarify invoices, renewals, payment methods, or subscription adjustments.
-
-* 🔧 **Technical Guidance**  
-  Interpret logs, explain panel options, and recommend next troubleshooting steps.
-
-* 🛠️ **Self-Service Coaching**  
-  Walk you through rebuilds, IP assignments, traffic limits, or other control panel tasks.
-
-* 🚀 **Escalation Path**  
-  When something needs deeper inspection, we connect you with the right internal specialists fast.
+Think of the support desk as your navigation partner: we help you decipher the platform, organise billing, and surface the best resources so you can stay productive.
 
 ---
 
-## Where the Line Is Drawn
+## What We Handle (and How)
 
-To protect your privacy and maintain a clean security posture, support **will not**:
+- 💬 **Billing & Accounts** – clarify invoices, credit notes, renewals, payment methods, or ownership transfers.
+- 🧭 **Portal Coaching** – walk you through traffic pools, rDNS updates, snapshots, reinstalls, and other control panel features.
+- 🩺 **Troubleshooting Guidance** – review symptoms, suggest diagnostics, and link to targeted runbooks in the docs.
+- 🚨 **Escalations** – flag unusual behaviour for our infrastructure engineers when something needs deeper inspection.
 
-- Sign in to your VPS or any downstream systems
-- Install or remove applications on your behalf
-- Edit configuration files, firewall rules, or open ports
-- Reset passwords or alter user roles within your instance
-- Move customer data between servers or accounts
-
-EDBB delivers the infrastructure; **you remain the administrator** of the operating system itself.
+Whichever channel you prefer—live messenger or email—we’ll respond with clear steps and links you can action immediately.
 
 ---
 
-## Getting Additional Assistance
+## Your Responsibilities as VPS Administrator
 
-1. **Dive into EDBB Docs** 📘  
-   Our [documentation portal](https://docs.edbb.com) houses implementation guides, common fixes, and how-tos.
+To protect customer privacy and preserve a clean security posture, there are tasks only you (or someone you authorise) should perform.
 
-2. **Hire a Systems Professional** 👩‍💻  
-   For custom stacks, migrations, or advanced configurations, collaborate with an independent system administrator.
+<Info>
+  ⚠️ EDBB Support does <strong>not</strong>:
+  <ul>
+    <li>Log in to your VPS, databases, or downstream services</li>
+    <li>Install packages, edit configuration files, or apply operating system patches</li>
+    <li>Open firewall ports, alter security groups, or transfer customer data</li>
+    <li>Change system-level passwords or manage user accounts inside your instance</li>
+  </ul>
+</Info>
 
-3. **Learn from the Community** 🌍  
-   Peer groups and VPS forums are excellent places to compare solutions and discover real-world tips.
+You keep the admin keys; we make sure the surrounding infrastructure and tooling stay reliable.
 
 ---
 
-## We're Glad to Help
+## Need More Than a Nudge?
 
-Thank you for choosing **EDBB** as your hosting platform.  
-Anytime you have a question or need to clarify a process, reach out — our team is ready to assist while keeping your environment secure.
+<Steps>
+  <Step title="Check the EDBB Docs Library">
+    The <a href="https://docs.edbb.com" target="_blank" rel="noreferrer">documentation hub</a> covers deployments, recoveries, and FAQs in depth. It’s usually the fastest way to confirm a setting or procedure.
+  </Step>
+  <Step title="Bring in a Systems Expert">
+    For custom stacks, migrations, audits, or security hardening, partner with a trusted freelancer or managed service provider who can work hands-on within your VPS.
+  </Step>
+  <Step title="Tap into the Community">
+    VPS forums, sysadmin groups, and professional networks often have real-world advice from peers running similar workloads.
+  </Step>
+</Steps>
+
+---
+
+## We’re Ready When You Are
+
+Serving you well is core to the EDBB experience. Reach out whenever something feels unclear—we’ll provide the context, resources, or escalation you need while keeping your environment private and secure.
