--- a/no-email-received.mdx
+++ b/no-email-received.mdx
@@ -21,7 +21,7 @@ The fastest way to regain access is to trigger a reinstall, choose your preferre
 
 <Steps>
   <Step title="Open the EDBB Management Dashboard">
-    To open the panel, <a href="https://my.edbb.com" target="_blank" rel="noreferrer">click here</a>.
+    To open the panel, visit the <a href="https://my.edbb.com" target="_blank" rel="noreferrer">EDBB VPS Portal</a>.
   </Step>
 
   <Step title="Select the affected VPS under Services" />
@@ -37,4 +37,4 @@ Reinstalling does not trigger a new email. The credentials you enter during the 
 
 ---
 
-🟦 **Quick reminder:** Bookmark [my.edbb.com](https://my.edbb.com) so your VPS information is always one click away.
+🟦 **Quick reminder:** Bookmark the [EDBB VPS Portal](https://my.edbb.com) so your VPS information is always one click away.
