--- a/vps-management/reset-root-password-linux.mdx
+++ b/vps-management/reset-root-password-linux.mdx
@@ -1,87 +1,116 @@
 ---
 title: "Regain Linux Root Access on EDBB VPS"
 sidebarTitle: "* Reset Root Access"
-description: "Recover the root password on your EDBB VPS by using the password helper ISO, updating credentials through the console, and restoring the normal boot order."
+description: "Use the EDBB password-helper ISO to reset the Linux root password, then return the VPS to its normal boot order."
 ---
 
-Losing the root password does not mean you need to rebuild your server.  
-Every EDBB VPS includes a password reset helper ISO that lets you update credentials from the virtual console in just a few minutes.  
-Follow the playbook below to regain control without touching your disks or reinstalling the operating system.
-
----
-
-## Before You Begin
-
-- Make sure you can log in to the [EDBB VPS Portal](https://my.edbb.com).  
-- Close any production sessions that might be affected by a reboot.  
-- Keep a secure password manager handy so you can store the new credential immediately.
+# Reset Root Password with the Helper ISO
 
 <Info>
-The reset workflow depends on a short-lived ISO boot.  
-While the helper ISO is attached, the VPS starts from that image instead of the local disk.  
-Once the password is updated, you’ll detach the ISO so normal boot resumes.
+  Every EDBB VPS ships with a password-helper ISO. Booting from it lets you assign a brand-new root password without reinstalling the operating system or touching your disks.
 </Info>
 
 ---
 
-## Step 1 — Open the EDBB VPS Portal
+## Before You Start
 
-1. Sign in at [https://my.edbb.com](https://my.edbb.com).  
-2. Head to **Services** and select the VPS that needs root access restored.  
-3. Confirm the instance is powered on; the helper ISO reboots automatically, so no manual shutdown is required.
+<CardGroup cols={3}>
+  <Card title="🔐 Portal Access Ready">
+    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. All steps happen from the service dashboard.
+  </Card>
+  <Card title="💾 Safe Maintenance Window">
+    Plan a brief outage. The VPS reboots twice—once to load the helper ISO, once to return to disk.
+  </Card>
+  <Card title="🔑 New Password Prepared">
+    Generate a strong credential (use a password manager) so you can paste it the moment the helper prompts for input.
+  </Card>
+</CardGroup>
 
 ---
 
-## Step 2 — Boot from the Password Helper ISO
+## Step 1 – Open the VPS Dashboard
 
-1. If the console is disabled, [turn on VNC access](https://docs.edbb.com/enable-vnc-server).  
-2. Choose **Mount ISO**, then follow the [mounting instructions](https://docs.edbb.com/mount-iso-image).  
-3. Pick **1_Password-Reset-Helper.iso** from the list.  
-4. Tick **Force reset & boot from the selected ISO** and click **Mount ISO**.  
-5. Wait a few moments while the VPS restarts from the helper image.  
-6. Launch the built-in noVNC viewer or connect with your preferred VNC client to watch the boot sequence.
+<Steps>
+  <Step title="Log in">
+    Sign in to the EDBB portal, go to <strong>Services</strong>, and open the VPS that needs root access restored.
+  </Step>
+  <Step title="Check power state">
+    Make sure the VPS is running. The helper flow reboots automatically—no manual shutdown is required.
+  </Step>
+</Steps>
+
+---
+
+## Step 2 – Boot from the Password Helper ISO
+
+<Steps>
+  <Step title="Enable console access">
+    In the quick action column on the left, expand the red <strong>VNC Off</strong> button and choose <strong>Enable VNC</strong>. If you need extra guidance, see the <a href="https://docs.edbb.com/enable-vnc-server">VNC guide</a>.
+  </Step>
+  <Step title="Open Installation → ISO Boot">
+    Switch to the <strong>Installation</strong> tab at the top of the service view, then click the <strong>ISO Boot</strong> sub-tab.
+  </Step>
+  <Step title="Mount the helper ISO">
+    Select <strong>1_Password-Reset-Helper.iso</strong>, tick <strong>Force reset & boot from the selected ISO</strong>, and click <strong>Mount ISO</strong>.
+  </Step>
+  <Step title="Open the console">
+    Launch the built-in console (or your preferred VNC client) to watch the helper boot.
+  </Step>
+</Steps>
 
 ![Password-Reset-Helper](/assets/jk221gGjGVanns-Password-Reset-Helper.png)
 
 ---
 
-## Step 3 — Set a New Root Password in the Console
+## Step 3 – Set the New Root Password
 
-1. In noVNC, click inside the window to capture keyboard focus.  
-2. Let the helper finish loading—you’ll see an on-screen prompt once it is ready.
+1. Click inside the console window to capture the keyboard.
+2. Wait until the helper finishes loading—you’ll see the on-screen prompt.
 
    ![Reset Linux Password](/assets/uLxSPwfKVMf9QP5wS5E-loadiso.png)
 
-3. Enter a strong root password and press **Enter**.
+3. Enter the new root password and press **Enter**.
 
    ![Reset Linux Password](/assets/tXo35rruULtcDq5XS2w-Enter-new-root-password.png)
 
-4. Confirm the password when prompted. A success message appears after validation.
+4. Re-enter the password to confirm. A success message appears.
 
    ![Reset Linux Password](/assets/jeKwpMQkTdx2ZDzyQxib-continue.png)
 
-5. Press **Enter** to continue. The helper automatically triggers a reboot back to the VPS disks.
+5. Press **Enter** again. The helper automatically unmounts itself and reboots the VPS from disk.
 
    ![Reset Linux Password](/assets/qdw2kfTSEeitQxPjo5Pm-unmount-drive.png)
 
-6. When the OS comes back online, log in with the new root password to make sure the change worked.
+6. Wait for the operating system to boot, then log in with the new root password to verify the change.
 
    ![Reset Linux Password](/assets/C2wnUn7YWnYg3TUjxNgm-root-debian12.png)
 
----
-
-## Step 4 — Detach the ISO and Lock Down Access
-
-1. Return to the portal and [unmount the helper ISO](https://docs.edbb.com/mount-iso-image) so future boots load from disk.  
-2. [Disable VNC access](https://docs.edbb.com/enable-vnc-server) once you finish testing.  
-3. Store the new password securely and distribute it only to trusted administrators.
+<Callout type="warning">
+  Write the password to your manager immediately—EDBB does not resend credentials. Treat the helper ISO as a temporary tool; leave it mounted only while you complete the reset.
+</Callout>
 
 ---
 
-## Aftercare Tips
+## Step 4 – Return to Normal Boot
 
-- Add SSH keys and disable password logins to prevent repeat lockouts.  
-- Schedule periodic credential reviews so stale accounts do not accumulate.  
-- Keep a copy of this process with your team’s recovery runbooks for quick reference.
+<Steps>
+  <Step title="Unmount the ISO">
+    Back in the <strong>Installation → ISO Boot</strong> tab, click <strong>Unmount</strong> so the VPS boots from disk next time.
+  </Step>
+  <Step title="Disable console access">
+    Turn VNC back off if it is only needed for recovery.
+  </Step>
+  <Step title="Secure the credential">
+    Store the new password in your team’s password manager and share it only with trusted administrators.
+  </Step>
+</Steps>
 
-By following these steps, you’ve restored root control without downtime or data loss—your EDBB VPS is back under your command.
+---
+
+## Aftercare Checklist
+
+- Replace password authentication with SSH keys once you confirm access.  
+- Review sudo/root accounts regularly to ensure they’re still required.  
+- Keep a copy of this playbook in your team’s incident response runbook for quick reference.
+
+With the helper ISO unmounted and the new credential saved, your EDBB VPS is back under your control.
