--- a/vps-management/reset-windows-admin-password.mdx
+++ b/vps-management/reset-windows-admin-password.mdx
@@ -1,57 +1,75 @@
 ---
 title: "Restore Windows Administrator Access on EDBB VPS"
 sidebarTitle: "* Reset Windows Password"
-description: "Use the EDBB password helper ISO and noVNC console to clear the Windows Administrator password, then assign a new secure credential."
+description: "Boot the Windows password-helper ISO, clear the Administrator password, and assign a new credential in a few minutes."
 ---
 
-Forgetting the Windows Administrator password is inconvenient, but you can recover quickly without reinstalling your VPS.  
-EDBB provides a password helper ISO that unlocks the local SAM database so you can sign back in and set a new password.  
-This walkthrough replaces the old credential and guides you through the post-reset clean-up.
-
----
-
-## Preparation Checklist
-
-- Confirm you can access the [EDBB VPS Portal](https://my.edbb.com).  
-- Expect the VPS to reboot once during the procedure.  
-- Have a replacement Administrator password ready to assign at the end.
+# Reset the Windows Administrator Password
 
 <Info>
-The helper ISO briefly boots the server into an offline environment.  
-It modifies the Windows account database so you can log in without knowing the previous password.
+  Every EDBB Windows VPS includes a password-helper ISO. Booting from it lets you clear the local SAM database and set a new Administrator password without reinstalling the operating system.
 </Info>
 
 ---
 
-## Step 1 — Open the EDBB VPS Portal
+## Before You Begin
 
-1. Visit [https://my.edbb.com](https://my.edbb.com) and sign in.  
-2. From **Services**, choose the Windows VPS that requires recovery.  
-3. Make sure the instance is running; the portal forces a reboot when you attach the helper ISO.
+<CardGroup cols={3}>
+  <Card title="🔐 Portal Access">
+    Confirm you can sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>. You’ll manage the entire workflow from the service dashboard.
+  </Card>
+  <Card title="🕒 Restart Window">
+    Allow a short maintenance window—the VPS reboots once into the helper ISO and once back into Windows.
+  </Card>
+  <Card title="🔑 New Password Ready">
+    Prepare a strong replacement password in your manager so you can paste it the moment Windows unlocks.
+  </Card>
+</CardGroup>
 
 ---
 
-## Step 2 — Attach the Password Helper ISO
+## Step 1 – Open the VPS Dashboard
 
-1. [Enable VNC access](https://docs.edbb.com/enable-vnc-server) if the console is disabled.  
-2. Select **Mount ISO** and follow the [mounting flow](https://docs.edbb.com/mount-iso-image).  
-3. Choose **1_Password-Reset-Helper.iso**.  
-4. Tick **Force reset & boot from the selected ISO**, then press **Mount ISO**.  
-5. Wait while the VPS restarts from the helper image.  
-6. Launch the built-in noVNC session or connect with a VNC viewer to monitor the console.
+<Steps>
+  <Step title="Log in">
+    Sign in to the EDBB portal, go to <strong>Services</strong>, and open the Windows VPS that needs recovery.
+  </Step>
+  <Step title="Check the status">
+    Ensure the VPS is running. The helper workflow uses an automated reboot—no manual shutdown required.
+  </Step>
+</Steps>
+
+---
+
+## Step 2 – Boot from the Password Helper ISO
+
+<Steps>
+  <Step title="Enable console access">
+    In the quick action column, expand the red <strong>VNC Off</strong> button and choose <strong>Enable VNC</strong>. See the <a href="https://docs.edbb.com/enable-vnc-server">VNC guide</a> if you need extra help.
+  </Step>
+  <Step title="Go to Installation → ISO Boot">
+    Switch to the <strong>Installation</strong> tab along the top, then select the <strong>ISO Boot</strong> sub-tab.
+  </Step>
+  <Step title="Mount the helper ISO">
+    Pick <strong>1_Password-Reset-Helper.iso</strong>, tick <strong>Force reset & boot from the selected ISO</strong>, and click <strong>Mount ISO</strong>.
+  </Step>
+  <Step title="Open the console">
+    Click <strong>Open Console</strong> to launch the portal console (or use your preferred VNC client) and watch the helper environment boot.
+  </Step>
+</Steps>
 
 ![Reset Windows Password](/assets/jk221gGjGVanns-Password-Reset-Helper.png)
 
 ---
 
-## Step 3 — Clear the Administrator Password
+## Step 3 – Clear the Administrator Password
 
-1. In the noVNC window, click to capture keyboard focus.  
-2. When the helper finishes loading, it displays the password reset menu.
+1. Click inside the console window so keyboard input is captured.
+2. Wait for the helper menu to appear.
 
    ![Reset Windows Password](/assets/UVFJBNhdbn1c73-chntpw.png)
 
-3. Press **Enter**, then type `1` to select **Reset Administrator password** and press **Enter** again.
+3. Press **Enter**, type `1` for **Reset Administrator password**, and press **Enter** again.
 
    ![Reset Windows Password](/assets/ix5iD2dZZyen4P22emv-resetadminpassword.png)
 
@@ -67,13 +85,17 @@ It modifies the Windows account database so you can log in without knowing the p
 
    ![Reset Windows Password](/assets/mHzEbq4n4DXgiT5iVFz-umount.png)
 
-The server will restart automatically and boot back into Windows.
+The VPS restarts automatically and boots back into Windows with the Administrator password cleared.
+
+<Callout type="warning">
+  Store the new password immediately—EDBB does not resend credentials. Treat the helper ISO as temporary; leave it mounted only while you complete the reset.
+</Callout>
 
 ---
 
-## Step 4 — Sign In and Set a New Password
+## Step 4 – Sign In and Set a New Password
 
-1. After the reboot, Windows signs in without prompting for a password.  
+1. After the reboot, Windows signs in without asking for a password.  
 2. Launch **Command Prompt** as Administrator.
 
    ![Reset Windows Password](/assets/nB_DvyqQcZNKEL5141Wak_win1.jpeg)
@@ -86,22 +108,30 @@ net user Administrator "NewStrongPassword!"
 
    ![Reset Windows Password](/assets/q7wiAyHP8mf8iXnKbh1HU_newpassword.png)
 
-4. Close the command window and log off, then sign back in to confirm the new password works.
+4. Close the command window, log off, and sign back in with the new Administrator password to confirm the change.
 
 ---
 
-## Step 5 — Detach the ISO and Lock Down Access
+## Step 5 – Return to Normal Boot
 
-1. Return to the portal and [unmount the helper ISO](https://docs.edbb.com/mount-iso-image) so future reboots use the local disk.  
-2. [Disable VNC access](https://docs.edbb.com/enable-vnc-server) if you no longer need console access.  
-3. Update any password managers or internal documentation with the new credentials.
+<Steps>
+  <Step title="Unmount the ISO">
+    Back in <strong>Installation → ISO Boot</strong>, click <strong>Unmount</strong> so Windows boots from disk next time.
+  </Step>
+  <Step title="Disable VNC">
+    Toggle VNC back off if you only needed it for the reset.
+  </Step>
+  <Step title="Update records">
+    Store the new credential in your password manager and update any internal runbooks.
+  </Step>
+</Steps>
 
 ---
 
-## Next Steps
+## Aftercare Tips
 
-- Consider enabling multi-factor logons for administrative accounts.  
-- Review user accounts periodically to ensure former staff or contractors are removed.  
-- Keep this guide in your incident response folder for future reference.
+- Enable multi-factor authentication for administrative users where possible.  
+- Audit local accounts periodically and remove access for former staff or contractors.  
+- Keep this helper ISO workflow in your incident response plan for future reference.
 
-With these steps complete, you’ve restored control of the Windows Administrator account on your EDBB VPS without touching the operating system installation.
+You have now restored Administrator access to your Windows VPS without reinstallation.
