--- a/vps-management/your-support-pin.mdx
+++ b/vps-management/your-support-pin.mdx
@@ -1,26 +1,25 @@
 ---
 title: "How to Find and Use Your EDBB Support PIN"
 sidebarTitle: "* Support PIN"
-description: "Locate and use your EDBB Support PIN to confirm ownership when requesting changes or contacting support."
+description: "Locate the Support PIN in the portal and understand when EDBB Support will ask for it."
 ---
 
 # Manage Your Support PIN
 
-Every VPS has a unique Support PIN. We ask for this code whenever you need sensitive assistance—like changing account contacts, requesting manual interventions, or verifying ownership over chat.
+<Info>
+  The Support PIN verifies account ownership when you contact EDBB Support. Keep it handy for sensitive changes (billing, contact updates, service escalations) and store it securely.
+</Info>
 
 ---
 
-## Locate the PIN in the Portal
+## Step 1 – Locate the PIN
 
 <Steps>
-  <Step title="Sign in to the EDBB VPS Portal">
-    Visit <a href="https://my.edbb.com/clientarea.php" target="_blank">my.edbb.com</a> and open <strong>Services</strong>.
+  <Step title="Open your VPS dashboard">
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>, go to <strong>Services</strong>, and select the VPS.
   </Step>
-  <Step title="Open the VPS you need help with">
-    Click the service name to load its management dashboard.
-  </Step>
-  <Step title="Scroll to the Information panel">
-    The Support PIN appears near the bottom of the details card, next to the KVM ID and hostname.
+  <Step title="Check the information card">
+    In the right-hand panel you’ll see <strong>Support PIN</strong> along with the KVM ID and installed OS. Use the copy icon to paste it into secure notes or when contacting Support.
   </Step>
 </Steps>
 
@@ -28,22 +27,28 @@ Every VPS has a unique Support PIN. We ask for this code whenever you need sensi
 
 ---
 
-## When Support Will Ask for the PIN
+## Step 2 – Know When We’ll Ask for It
 
-- Live chat or ticket escalations that touch billing, contacts, or ownership
-- Requests to reset panel access, modify rDNS delegations, or attach private data
-- Any time your email address or telephone number on file needs to be updated
+- Live chat or email requests involving billing, contact changes, or ownership questions.  
+- Resetting panel access, modifying rDNS, or attaching private data when messaging Support.  
+- Any time you need to prove identity before we discuss sensitive information.
 
-Sharing the correct PIN lets us process verified requests without additional paperwork.
+Providing the PIN speeds up verification so we can process your request immediately.
 
 ---
 
-## Keep the PIN Secure
+## Step 3 – Keep the PIN Secure
 
-- Store the code in your team password manager instead of emailing it around.
-- Rotate the support contact list when staff changes so only current admins have access.
-- Never publish the PIN in public issue trackers or shared screenshots.
+<CardGroup cols={3}>
+  <Card title="🔒 Store Safely">
+    Save the PIN in a team password manager instead of email or shared docs.
+  </Card>
+  <Card title="👥 Limit Access">
+    Update access when staff change roles so only current admins can view it.
+  </Card>
+  <Card title="⚠️ Suspect Exposure?">
+    Contact Support via the messenger or by email—we can invalidate the old PIN and issue a new one.
+  </Card>
+</CardGroup>
 
-If you suspect the PIN is compromised, open a ticket—we will invalidate it and issue a fresh code immediately.
-
-Need hands-on help right now? Reach us via the blue chat bubble or <a href="https://www.edbb.com/contact" target="_blank">contact form</a> and quote the Support PIN along with your VPS identifier.
+Need help right now? Reach us via the portal chat bubble or the <a href="https://www.edbb.com/contact" target="_blank">contact form</a>, quoting your VPS ID and Support PIN for quick verification.
