--- a/vps-management/ip-address-information.mdx
+++ b/vps-management/ip-address-information.mdx
@@ -1,47 +1,54 @@
 ---
 title: "VPS IP Address Settings & Network Info"
-description: "Use the EDBB portal to review IPv4/IPv6 assignments, gateways, and DNS settings for your VPS."
 sidebarTitle: "* VPS IP Settings"
+description: "Find IPv4, IPv6, gateway, and DNS details for your VPS on the Network tab of the EDBB portal."
 ---
 
-# Review VPS Networking Details
+# Network Tab Overview
 
-Need the exact IP assignments or gateways for your VPS? The EDBB portal keeps everything in one panel so you always know how the server is configured.
+<Info>
+  The Network tab shows every IP assigned to your VPS plus the gateways and DNS resolvers you need when configuring the operating system. Use it as your source of truth before editing network interfaces inside the guest OS.
+</Info>
 
 ---
 
-## Check the Network Info Card
+## Step 1 – Open the Network Tab
 
 <Steps>
   <Step title="Log in to the portal">
-    Visit <a href="https://my.edbb.com/clientarea.php" target="_blank">my.edbb.com</a> and open <strong>Services</strong>.
+    Visit the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a>, go to <strong>Services</strong>, and select your VPS.
   </Step>
-  <Step title="Select your VPS">
-    Click the target service to bring up the management dashboard.
-  </Step>
-  <Step title="Open the Network Info section">
-    Scroll to <strong>IP Settings</strong>. Expand the card to see every assigned address and gateway.
+  <Step title="Switch to Network">
+    Click the <strong>Network</strong> tab in the service navigation. The page lists IPv4, IPv6, and DNS information.
   </Step>
 </Steps>
 
-![IP Address Settings](/assets/vps-network-info.webp)
+![Network Tab](/assets/vps-network-tab.png)
 
 ---
 
-## What You’ll See
+## What the Tab Shows
 
-- **Primary IPv4** plus any additional addresses that belong to the VPS  
-- **Dedicated /64 IPv6** block, including the auto-configured address currently active on the NIC  
-- **Default gateways** for IPv4 and IPv6 so you can configure static routes inside the OS  
-- **Reverse DNS status** with quick links to edit PTR records  
-- **Nameserver entries** that match the configuration supplied by the hypervisor
-
-Use this view as the source of truth whenever you reconfigure networking inside the guest operating system.
+<CardGroup cols={2}>
+  <Card title="IPv4 Configuration">
+    Dedicated IPv4 addresses, subnet mask, and gateway. Use these values when adding or reconfiguring addresses in your OS.
+  </Card>
+  <Card title="IPv6 Configuration">
+    Your assigned /64 equivalent range, gateway, and a reminder to configure routes with a /48 prefix. Dual-stack tips are provided for Linux and other OSes.
+  </Card>
+  <Card title="DNS Resolvers">
+    Recommended public resolvers (IPv4 and IPv6) for dual-stack compatibility.
+  </Card>
+  <Card title="Add IP Helper">
+    The **Add IP** button (when available) creates requests for additional IPv4 addresses that support team members can review.
+  </Card>
+</CardGroup>
 
 ---
 
-## Related Tasks
+## Tips for Using the Data
 
-- Need to swap the main IPv4? Follow the <a href="/faq/ip-addresses/change-ip-address">Change IP guide</a>.  
-- Looking for more addresses? See <a href="/faq/ip-addresses/order-additional-ip-address">Order Additional IPv4</a>.  
-- Troubleshooting IPv6 reachability? Start with <a href="/vps-management/basic-ipv6-troubleshooting">IPv6 quick checks</a>.
+- Configure additional IPv4 addresses using the subnet mask and gateway shown. Use only one gateway in your OS configuration.  
+- For IPv6, assign addresses from your range and route traffic through the listed gateway using a /48 prefix.  
+- Apply DNS entries directly in your operating system or cloud-init user-data so services resolve correctly.  
+- Need to change or order more addresses? Follow the <a href="/faq/ip-addresses/change-ip-address">Change IP</a> or <a href="/faq/ip-addresses/order-additional-ip-address">Order Additional IPv4</a> guides.
